[package]
name = "iceberg-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
iceberg = "0.4.0"
iceberg-catalog-rest = "0.4.0"
monoio = "0.2.4"
futures = "0.3.31"
parquet = "53.4.0"
arrow-array = "53.4.0"
arrow-schema = "53.4.0"
bytes = "1.9.0"
opendal = { version = "0.52.0", features = ["services-memory"], default-features = false }
