[package]
name = "rust-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
iceberg = "0.4.0"
iceberg-catalog-rest = "0.4.0"
monoio = "0.2.4"
futures = "0.3.31"
parquet = "53.4.0"
arrow-array = "53.4.0"
arrow-schema = "53.4.0"
bytes = "1.9.0"
opendal = { version = "0.52.0", features = ["services-memory"], default-features = false }

ntex = { version = "2.0", features = ["tokio", "rustls"] }
ntex-io = { version = "2.0" }
ntex-mqtt = { version = "4.6" }

sfv = "^0.10"
pingora-load-balancing = "0.4.0"

[[bin]]
name = "iceberg"
path = "src/iceberg.rs"

[[bin]]
name = "arrow_writer"
path = "src/arrow_writer.rs"

[[bin]]
name = "async_arrow_writer"
path = "src/async_arrow_writer.rs"

[[bin]]
name = "opendal"
path = "src/opendal.rs"

[[bin]]
name = "mqtt_gateway"
path = "src/mqtt_gateway/mod.rs"